Custom transition between Quiz Options and CardFront.  Also started CustomAnimation class to share animations.

--- a/Enfoca/Features/Quiz/Quiz.storyboard
+++ b/Enfoca/Features/Quiz/Quiz.storyboard
@@ -40,7 +40,7 @@
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xfE-cp-NnS">
-                                <rect key="frame" x="0.0" y="60" width="414" height="676"/>
+                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
                                 <subviews>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cgd-3r-M2o">
                                         <rect key="frame" x="8" y="74" width="398" height="80"/>
@@ -124,6 +124,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <color key="backgroundColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="cgd-3r-M2o" firstAttribute="leading" secondItem="xfE-cp-NnS" secondAttribute="leading" constant="8" id="1S7-sY-JnN"/>
                                     <constraint firstItem="cgd-3r-M2o" firstAttribute="leading" secondItem="pnF-29-0al" secondAttribute="leading" id="Cuv-HW-8LD"/>
@@ -139,7 +140,7 @@
                                 </constraints>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mTr-N8-uaL" customClass="EnfocaButton" customModule="Enfoca" customModuleProvider="target">
-                                <rect key="frame" x="126" y="298" width="163" height="50"/>
+                                <rect key="frame" x="126" y="302" width="163" height="50"/>
                                 <color key="backgroundColor" red="0.64324307439999995" green="0.80505788330000005" blue="0.46183288099999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="9wJ-l2-zJy"/>
@@ -154,25 +155,27 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="uhx-WB-U6O" firstAttribute="top" secondItem="xfE-cp-NnS" secondAttribute="bottom" id="4nR-cK-zof"/>
                             <constraint firstItem="q1d-8s-92l" firstAttribute="top" secondItem="Cwm-oR-RE8" secondAttribute="bottom" constant="-20" id="6br-4H-2VQ"/>
                             <constraint firstItem="q1d-8s-92l" firstAttribute="leading" secondItem="uhf-X2-nf1" secondAttribute="leading" id="GK6-am-yak"/>
                             <constraint firstItem="DXF-B8-fPG" firstAttribute="top" secondItem="Cwm-oR-RE8" secondAttribute="bottom" constant="12" id="HoM-aK-v5i"/>
                             <constraint firstItem="mTr-N8-uaL" firstAttribute="centerX" secondItem="xfE-cp-NnS" secondAttribute="centerX" id="Hp0-vS-Isd"/>
-                            <constraint firstItem="xfE-cp-NnS" firstAttribute="top" secondItem="q1d-8s-92l" secondAttribute="bottom" constant="-4" id="awq-vj-buV"/>
                             <constraint firstAttribute="trailing" secondItem="xfE-cp-NnS" secondAttribute="trailing" id="dtM-Ra-lgX"/>
                             <constraint firstItem="xfE-cp-NnS" firstAttribute="leading" secondItem="uhf-X2-nf1" secondAttribute="leading" id="hpU-lv-JAu"/>
                             <constraint firstItem="mTr-N8-uaL" firstAttribute="top" secondItem="pnF-29-0al" secondAttribute="bottom" constant="39" id="jhD-Yc-4Vu"/>
                             <constraint firstAttribute="trailing" secondItem="q1d-8s-92l" secondAttribute="trailing" id="o4S-5I-ec8"/>
+                            <constraint firstItem="xfE-cp-NnS" firstAttribute="top" secondItem="Cwm-oR-RE8" secondAttribute="bottom" constant="44" id="t5E-b1-DNg"/>
                             <constraint firstItem="Gzy-Ir-ilw" firstAttribute="top" secondItem="mTr-N8-uaL" secondAttribute="bottom" constant="19" id="xMx-Oh-u3i"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="cardSideSegmentedControl" destination="pnF-29-0al" id="aoh-4d-HAX"/>
                         <outlet property="headerBackgroundView" destination="q1d-8s-92l" id="pcR-Rf-duH"/>
+                        <outlet property="scrollView" destination="xfE-cp-NnS" id="Ps0-mV-pX3"/>
                         <outlet property="titleLabel" destination="DXF-B8-fPG" id="1sd-IL-pIH"/>
+                        <outlet property="topToHeaderBottomConstraint" destination="t5E-b1-DNg" id="yGX-l4-dea"/>
                         <outlet property="wordCountLabel" destination="bfZ-Ux-7sl" id="Gkw-fw-TV3"/>
                         <outlet property="wordOrderPicker" destination="cgd-3r-M2o" id="GoD-OT-X7d"/>
                         <segue destination="qW3-WU-nJg" kind="show" identifier="BeginQuizSegue" id="oQB-FF-xDm"/>
@@ -390,6 +393,7 @@
                         <outlet property="headerView" destination="iF2-oU-7CL" id="NKt-0j-C8t"/>
                         <outlet property="termLabel" destination="fcQ-zW-8J7" id="UOK-VU-Wdn"/>
                         <outlet property="timerLabel" destination="mB1-qP-yvu" id="plg-ZX-McL"/>
+                        <outlet property="titleLabel" destination="ESb-ad-9La" id="npH-cz-bGW"/>
                         <segue destination="ZOI-8A-KLN" kind="show" identifier="QuizRearViewControllerSegue" id="ew9-Wj-gac"/>
                     </connections>
                 </viewController>
@@ -616,6 +620,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="AKo-2B-8On"/>
+        <segue reference="oQB-FF-xDm"/>
     </inferredMetricsTieBreakers>
 </document>
